Fix some issues for the people still on IE7 - or as we like to call them; clients. Closes #3

--- a/sass/_general_elements.sass
+++ b/sass/_general_elements.sass
@@ -41,7 +41,7 @@ h1
 h2, .wiki h1
   font-size: 1.96em
   margin-bottom: 0.4em
-  margin-top: 1em
+  margin-top: 0
 h3
   font-size: 1.4em
   margin-bottom: 0.2em
