--- a/sass/mixins/_navigation-list.sass
+++ b/sass/mixins/_navigation-list.sass
@@ -10,5 +10,6 @@
     position: relative
   a
     display: block
+    margin: 0
     padding: $spacing/2
     text-decoration: none
